--- a/Know/Index.html
+++ b/Know/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Know</title>
     
-    <link rel="icon" type="image/x-icon" href="./Src/favicon.png"> 
+    <link rel="icon" type="image/x-icon" href="./Know/Src/favicon.png"> 
 
     <style>
         /* Define o body e o html para ocupar a tela inteira e remove margens padrão */
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-    <iframe src="./home.html" name="meu-iframe"></iframe>
+    <iframe src="./Know/home.html" name="meu-iframe"></iframe>
 
 </body>
 </html>
