--- a/Know/index.html
+++ b/Know/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-    <iframe src="./home.html" name="meu-iframe"></iframe>
+    <iframe src="./Home.html" name="meu-iframe"></iframe>
 
 </body>
 </html>
