--- a/home.html
+++ b/home.html
@@ -67,6 +67,6 @@
         <p>Desenvolvido por know <a id="infoLink" href="./pages/resources.html">mais informações</a>.</p>
     </footer>
     
-    <script src="scripts/script.js" type="module"></script>
+    <script src="./Know/scripts/script.js" type="module"></script>
 </body>
 </html>
