--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Know/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Know Search</title>
 </head>
@@ -67,6 +67,6 @@
         <p>Desenvolvido por know <a id="infoLink" href="./pages/resources.html">mais informações</a>.</p>
     </footer>
     
-    <script src="./Know/scripts/script.js" type="module"></script>
+    <script src="./scripts/script.js" type="module"></script>
 </body>
 </html>
