--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
         <p>Desenvolvido por know <a id="infoLink" href="./pages/resources.html">mais informações</a>.</p>
     </footer>
     
-    <script src="./scripts/script.js" type="module"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
