--- a/pages/resources.html
+++ b/pages/resources.html
@@ -12,7 +12,7 @@
     <div id="main-content">
         <ul class="vertical-list">
             <li>
-                <a href="../home.html">
+                <a href="../index.html">
                     <i class="fas fa-home"></i>
                     <p>Go Home</p>
                 </a>
