--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <aside id="sidebar" class="sidebar">
         <div class="sidebar-header">
-            <h2 class="logo">Essencial.Hub</h2>
+            <h2 class="logo">FanWiki</h2>
             <button class="close-btn" id="close-sidebar-btn">&times;</button>
         </div>
         <nav class="sidebar-nav">
@@ -26,12 +26,15 @@
             </ul>
         </nav>
         <div class="sidebar-footer">
-             <p>&copy; 2025 Essencial Hub</p>
+             <p>&copy; 2025 FanWiki</p>
         </div>
     </aside>
     <div id="overlay" class="overlay"></div>
 
     <header class="top-nav-social">
+        <button class="menu-icon" id="menu-toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
         <div class="search-bar-container">
             <i class="fas fa-search search-icon-inside"></i>
             <input type="text" id="main-search-input" placeholder="pesquisar">
