--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         <nav class="sidebar-nav">
             <ul>
                 <li><a href="./pages/tools/index.html"><i class="fas fa-tools"></i>Tools</a></li>
-                <li><a href="#"><i class="fas fa-bookmark"></i> Favoritos</a></li>
-                <li><a href="#"><i class="fas fa-chart-line"></i> Estatísticas</a></li>
-                <li><a href="#"><i class="fas fa-cog"></i> Configurações</a></li>
+                <li><a href="#"><i class="fas fa-bookmark"></i>Blog</a></li>
                 <li><a href="#"><i class="fas fa-info-circle"></i> Sobre</a></li>
             </ul>
         </nav>
