--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         </div>
         <nav class="sidebar-nav">
             <ul>
-                <li><a href="./pages/tools/index.html"><i class="fas fa-tools"></i>Tools</a></li>
-                <li><a href="#"><i class="fas fa-blog"></i>Blog</a></li>
-                <li><a href="#"><i class="fas fa-info-circle"></i> Sobre</a></li>
+               <li><a href="./pages/Abaut.html"><i class="fas fa-info-circle"></i>Abaut</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
