--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <button class="tab-button" data-tab="images">
             <i class="fas fa-image"></i> Imagens
         </button>
+        <button class="tab-button" data-tab="gifs">
+            <i class="fas fa-magic"></i> GIFs
+        </button>
     </nav>
     <main class="social-feed-container">
         <div id="wiki-content" class="tab-content active">
@@ -104,6 +107,16 @@
             <div id="images-grid-container" class="images-grid">
             </div>
         </div>
+
+         <div id="gifs-content" class="tab-content">
+            <div id="gifs-filter-container" class="topic-filter-container">
+            </div>
+            <div id="gifs-loading" class="loading-indicator" style="display: none;">
+                <i class="fas fa-spinner fa-spin"></i> Carregando GIFs do GitHub...
+            </div>
+            <div id="gifs-grid-container" class="images-grid">
+            </div>
+         </div>
         
         <p id="filter-status" class="filter-status"></p>
     </main>
