--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <button class="tab-button" data-tab="gifs">
             <i class="fas fa-magic"></i> GIFs
         </button>
-        <a href="./pages/More/Index.html" class="tab-button" data-tab="gifs">
+        <a href="./pages/More/Wiki.html" class="tab-button" data-tab="gifs">
             <i class="fas fa-brain"></i> Wiki
         </a>
     </nav>
