--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -9,7 +9,7 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./More/style.css">
 </head>
 <body>
 
@@ -57,6 +57,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./More/script.js"></script>
 </body>
 </html>
