Update link to 'Abaut.html' in sidebar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="sidebar-nav">
             <ul>
-               <li><a href="./pages/resources.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
+               <li><a href="./pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
