Add hero banner section to Wiki.html

--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -36,8 +36,10 @@
             <button class="nav-btn" data-category="anime">Anime</button>
             <button class="nav-btn" data-category="cartoon">Cartoon</button>
         </div>
-        
     </nav>
+
+
+     <section class="hero-banner"></section>
 
     <main id="content-rows">
         </main>
