Update favicon and logo image sources in Index.html

--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FanWiki</title>
-    <link rel="icon" type="image/x-icon" href="./src/Logo.png"> 
+    <link rel="icon" type="image/x-icon" href="./src/favicon.png"> 
    
     <style>
         /* Estilos base para ocupar toda a tela */
@@ -81,13 +81,13 @@
 
     <div id="splash-screen">
         
-        <img id="logo-image" src="caminho/para/sua/logo-branca.png" alt="Logo da Aplicação">
+        <img id="logo-image" src="src/favicon.png" alt="Logo da Aplicação">
 
         <div class="loading-text">CARREGANDO...</div>
     </div>
 
     <div id="main-content">
-        <iframe id="main-iframe" src="conteudo.html" title="Conteúdo Principal"></iframe>
+        <iframe id="main-iframe" src="Home.html" title="Conteúdo Principal"></iframe>
     </div>
 
     <script>
