Update background color and remove loading text
Changed background color from blueviolet to white and removed loading text.

--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: blueviolet; /* Cor solicitada: BLUEVIOLET */
+            background-color: white; /* Cor solicitada: BLUEVIOLET */
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -42,15 +42,6 @@
             height: auto;
             max-width: 80%;
             margin-bottom: 20px;
-        }
-
-        /* Texto/Animação de Carregamento Simples (Opcional) */
-        .loading-text {
-            color: white; /* Mantido branco para contraste com BlueViolet */
-            font-family: sans-serif;
-            font-size: 1.2em;
-            letter-spacing: 2px;
-            animation: fadeInOut 2s infinite;
         }
 
         @keyframes fadeInOut {
@@ -83,7 +74,6 @@
         
         <img id="logo-image" src="src/favicon.png" alt="Logo da Aplicação">
 
-        <div class="loading-text">CARREGANDO...</div>
     </div>
 
     <div id="main-content">
