--- a/Home.html
+++ b/Home.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="sidebar-nav">
             <ul>
-               <li><a href="./pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
+               <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
@@ -54,7 +54,7 @@
             <button class="tab-button" data-tab="gifs">
                 <i class="fas fa-magic"></i> GIFs
             </button>
-            <a href="./pages/Wiki.html" class="tab-button" data-tab="gifs">
+            <a href="pages/Wiki.html" class="tab-button" data-tab="gifs">
                 <i class="fas fa-brain"></i> Wiki
             </a>
         </nav>
