--- a/Home.html
+++ b/Home.html
@@ -54,7 +54,7 @@
             <button class="tab-button" data-tab="gifs">
                 <i class="fas fa-magic"></i> GIFs
             </button>
-            <a href="pages/Wiki.html" class="tab-button" data-tab="gifs">
+            <a href="pages/Wiki.html" class="tab-button">
                 <i class="fas fa-brain"></i> Wiki
             </a>
         </nav>
