--- a/Home.html
+++ b/Home.html
@@ -57,6 +57,9 @@
             <a href="pages/Wiki.html" class="tab-button">
                 <i class="fas fa-brain"></i> Wiki
             </a>
+            <a href="pages/more/Game/Quiz/Quiz.html" class="tab-button">
+                <i class="fas fa-gamepad"></i>Quiz
+            </a>
         </nav>
         <main class="social-feed-container">
             
