--- a/pages/More/Games/Quiz/Quiz.html
+++ b/pages/More/Games/Quiz/Quiz.html
@@ -14,7 +14,7 @@
     <div class="selection-container">
         
         <div class="header-container">
-            <a href="../../../../Home.html" class="home-button-main" aria-label="Ir para a Página Inicial" style="display: flex;"><i class="fa-solid fa-house"></i></a>
+            <a href="../../../../../Home.html" class="home-button-main" aria-label="Ir para a Página Inicial" style="display: flex;"><i class="fa-solid fa-house"></i></a>
             <h1>Quiz</h1>
          </div>
 
