--- a/Home.html
+++ b/Home.html
@@ -20,6 +20,9 @@
             <ul>
                <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
             </ul>
+            <ul>
+               <li><a href="pages/Abaut.html"><i class="fas fa-plus"></i>Post</a></li>
+            </ul>
         </nav>
         <div class="sidebar-footer">
              <p>&copy; 2025 FanWiki</p>
