--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
                <li><a href="pages/Abaut.html"><i class="fas fa-info-circle"></i> Sobre</a></li>
             </ul>
             <ul>
-               <li><a href="pages/Abaut.html"><i class="fas fa-plus"></i>Post</a></li>
+               <li><a href="pages/Abaut.html"><i class="fas fa-plus"></i>Add</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
