--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -51,6 +51,6 @@
         </div>
     </div>
 
-    <script src="More/Wiki.js"></script>
+    <script src="More/Wiki.js" type="module"></script>
 </body>
 </html>
