--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -52,5 +52,6 @@
     </div>
 
     <script src="More/Wiki.js" type="module"></script>
+    <script src="More/Wiki-dados.js"></script>
 </body>
 </html>
