--- a/pages/More/Games/Quiz/Quiz.html
+++ b/pages/More/Games/Quiz/Quiz.html
@@ -86,6 +86,6 @@
         </div>
     </div>
 
-    <script src="Quiz.js"></script>
+    <script src="Quiz.js" type="module"></script>
 </body>
 </html>
