--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -21,12 +21,21 @@
                 <i class="fas fa-satellite-dish"></i> INÍCIO
             </a>
             
+            <button id="sidebar-toggle" class="sidebar-toggle-btn" aria-label="Abrir Menu de Navegação">
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="search-container">
                 <input type="text" id="search-bar" placeholder="Buscar título ou categoria...">
             </div>
         </div>
         
-        <div class="nav-links">
+        </nav>
+
+    <aside id="sidebar-menu" class="sidebar-menu">
+        <button id="sidebar-close-btn" class="sidebar-close-btn" aria-label="Fechar Menu">
+            <i class="fas fa-times"></i>
+        </button>
+        <div class="sidebar-links">
             <button class="nav-btn active" data-category="all">Início</button>
             <button class="nav-btn" data-category="series">Séries</button>
             <button class="nav-btn" data-category="filmes">Filmes</button>
@@ -35,10 +44,8 @@
             <button class="nav-btn" data-category="anime">Anime</button>
             <button class="nav-btn" data-category="cartoon">Cartoon</button>
         </div>
-    </nav>
-
-
-     <section class="hero-banner"></section>
+    </aside>
+    <section class="hero-banner"></section>
 
     <main id="content-rows">
         </main>
