--- a/Index.html
+++ b/Index.html
@@ -3,32 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FanWiki</title>
+    <title>FanWiki - Carregando</title>
     <link rel="icon" type="image/x-icon" href="./src/favicon.png"> 
    
     <style>
-        /* Estilos base para ocupar toda a tela */
+        /* 1. VARIÁVEIS DE DESIGN (COPIADAS DO WIKI.CSS) */
+        :root {
+            --primary-color: #8a2be2;     /* blueviolet */
+            --background-color: #120e1a;  /* Fundo dark (roxo bem escuro) */
+            --text-color: #e0e0e0;        /* Texto principal (cinza claro) */
+            --glass-bg: rgba(255, 255, 255, 0.05); /* Fundo do "vidro" */
+            --blur-value: 10px;                   /* Nível de desfoque */
+            --font-stack: 'Poppins', 'Helvetica Neue', Arial, sans-serif;
+        }
+
+        /* 2. ESTILOS BASE */
         html, body {
             height: 100%;
             margin: 0;
             overflow: hidden; 
+            font-family: var(--font-stack);
         }
 
-        /* 1. Estilos da Splash Screen */
+        /* 3. ESTILOS DA SPLASH SCREEN (TEMA DARK/VIOLET) */
         #splash-screen {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: white; /* Cor solicitada: BLUEVIOLET */
+            /* Fundo principal escuro */
+            background-color: var(--background-color); 
+            /* Adiciona o efeito de "aura" */
+            background-image: radial-gradient(circle at 80% 20%, rgba(138, 43, 226, 0.3), transparent 50vmax),
+                              radial-gradient(circle at 20% 80%, rgba(138, 43, 226, 0.2), transparent 50vmax);
+            background-attachment: fixed;
+            
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            z-index: 1000;
+            z-index: 9999;
             opacity: 1;
-            transition: opacity 1s ease-out; /* Transição de opacidade suave */
+            transition: opacity 1s ease-out; 
+            color: var(--text-color);
         }
 
         #splash-screen.fade-out {
@@ -36,21 +54,48 @@
             pointer-events: none; 
         }
 
-        /* Estilos da Logo (Substitua o SRC pela sua logo clara) */
+        /* Estilos da Logo/Imagem */
         #logo-image {
             width: 150px; 
             height: auto;
             max-width: 80%;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            /* Adiciona um brilho sutil para destacar a logo */
+            filter: drop-shadow(0 0 10px var(--primary-color));
+            animation: pulse 2s infinite ease-in-out; /* Nova animação */
         }
 
-        @keyframes fadeInOut {
-            0% { opacity: 0.2; }
-            50% { opacity: 1; }
-            100% { opacity: 0.2; }
+        /* Estilo do Texto de Carregamento */
+        .loading-text {
+            font-size: 1.2em;
+            font-weight: 500;
+            color: var(--primary-color);
+            margin-top: 10px;
         }
 
-        /* 2. Estilos do Conteúdo Principal (Iframe) */
+        /* Estilo do Loader (Animação de Blueviolet) */
+        .loader {
+            border: 4px solid rgba(255, 255, 255, 0.3); /* Círculo de fundo claro */
+            border-top: 4px solid var(--primary-color); /* Animação primária */
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            animation: spin 1s linear infinite;
+            margin-top: 20px;
+        }
+
+        /* Animações */
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); filter: drop-shadow(0 0 10px var(--primary-color)); }
+            50% { transform: scale(1.05); filter: drop-shadow(0 0 15px var(--primary-color)); }
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* 4. ESTILOS DO CONTEÚDO PRINCIPAL (Iframe) */
         #main-content {
             width: 100%;
             height: 100%;
@@ -73,8 +118,8 @@
     <div id="splash-screen">
         
         <img id="logo-image" src="src/favicon.png" alt="Logo da Aplicação">
-
-    </div>
+        <div class="loading-text">Carregando FanWiki...</div>
+        <div class="loader"></div> </div>
 
     <div id="main-content">
         <iframe id="main-iframe" src="Home.html" title="Conteúdo Principal"></iframe>
