--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
              <li>
-                <a href="https://www.instagram.com/caio_borges0978?utm_source=qr&igsh=MXE0ZnBwNWtiaHY5aw==" target="_blank"
+                <a href="https://x.com/FanWikiOficial?t=kSG3GwUOCaaDlP67td2Pjw&s=09" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fas fa-user-astronaut"></i>
                     <p>Creator</p>
