--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -25,8 +25,9 @@
         
         <nav class="sidebar-nav">
             <ul>
-               <li><a href="#"><i class="fas fa-info-circle"></i> Sobre</a></li>
+               <!--<li><a href="#"><i class="fas fa-info-circle"></i> Sobre</a></li>
                <li><a href="#"><i class="fas fa-cog"></i> Configurações</a></li>
+           -->
             </ul>
         </nav>
         <div class="sidebar-footer">
