--- a/Home.html
+++ b/Home.html
@@ -40,7 +40,7 @@
 
         <nav class="content-tabs">
             <button class="tab-button active" data-tab="wiki">
-                <i class="fas fa-book"></i> Artigos
+                <i class="fas fa-book"></i> Wikipedia
             </button>
             <a href="pages/Wiki.html" class="tab-button">
                 <i class="fas fa-brain"></i> Wiki
