--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FanWiki - Carregando</title>
-    <link rel="icon" type="image/x-icon" href="/src/favicon.png"> 
+    <link rel="icon" type="image/x-icon" href="src/favicon.png"> 
    
     <style>
         /* 1. VARIÁVEIS DE DESIGN (COPIADAS DO WIKI.CSS) */
