--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FanWiki - Carregando</title>
+    <title>FanWiki</title>
     <link rel="icon" type="image/x-icon" href="src/favicon.png"> 
    
     <style>
