--- a/pages/More/Web.html
+++ b/pages/More/Web.html
@@ -307,7 +307,7 @@
         </button>
        
         <ul>
-             <a href="../../home.html"><i class="fas fa-globe"></i> Página Inicial</a>
+             <a href="../../Home.html"><i class="fas fa-globe"></i> Página Inicial</a>
         </ul>
     </div>
     
