--- a/Home.html
+++ b/Home.html
@@ -45,9 +45,9 @@
             <a href="pages/Wiki.html" class="tab-button">
                 <i class="fas fa-brain"></i> Wiki
             </a>
-           <!-- <a href="pages/More/Games/Quiz/Quiz.html" class="tab-button">
-                <i class="fas fa-gamepad"></i>Quiz
-            </a>--->
+           <a href="pages/More/Web.html" class="tab-button">
+                <i class="fas fa-globe"></i>Web
+            </a>
         </nav>
         
         <main class="social-feed-container">
