--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
              <li>
-                <a href="https://x.com/FanWikiOficial?t=kSG3GwUOCaaDlP67td2Pjw&s=09" target="_blank"
+                <a href="https://x.com/Caioborges923h?t=0l51rUyI3-D22DP_0QT7lg&s=09" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fas fa-user-astronaut"></i>
                     <p>Creator</p>
