--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiki</title>
+    <link rel="icon" type="image/x-icon" href="../src/favicon.png">
+    <title>FanWiki-Wiki</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
     
