--- a/Index.html
+++ b/Index.html
@@ -12,21 +12,31 @@
             height: 100%;
             margin: 0;
             overflow: hidden; 
-            font-family: var(--font-stack);
+            /* A fonte precisa estar definida ou importada, ex: */
+            /* font-family: Arial, sans-serif; */
         }
 
-        animation: pulse 2s infinite ease-in-out; /* Nova animação */
+        /* NOTA: Esta animação estava "solta" no seu CSS original,
+           sem um seletor. Ela não estava sendo aplicada a nada. 
+           Se precisar dela, aplique-a a uma classe ou ID.
+        */
+        /* animation: pulse 2s infinite ease-in-out; 
+        */
+
 
         /* 4. ESTILOS DO CONTEÚDO PRINCIPAL (Iframe) */
         #main-content {
             width: 100%;
             height: 100%;
-            visibility: hidden; 
+            /* visibility: hidden;  <-- REMOVIDO */
         }
 
+        /* Esta classe .visible não é mais necessária se o conteúdo é sempre visível */
+        /*
         #main-content.visible {
              visibility: visible;
         }
+        */
 
         #main-iframe {
             width: 100%;
