--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -26,9 +26,7 @@
         
         <nav class="sidebar-nav">
             <ul>
-               <!--<li><a href="#"><i class="fas fa-info-circle"></i> Sobre</a></li>
-               <li><a href="#"><i class="fas fa-cog"></i> Configurações</a></li>
-           -->
+               <li><a href="#"><i class="fas fa-info-heart"></i>Characters</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
