--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -26,7 +26,7 @@
         
         <nav class="sidebar-nav">
             <ul>
-               <li><a href="#"><i class="fas fa-info-heart"></i>Characters</a></li>
+               <li><a href="#"><i class="fas fa-globe"></i>Wiki</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
