--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -23,14 +23,10 @@
         <a href="../Home.html" class="nav-logo-btn" title="Ir para Home">
             <i class="fas fa-satellite-dish"></i> INÍCIO
         </a>
-
-        <a href="../Home.html" class="nav-logo-btn" title="Ir para Home">
-            <i class="fas fa-satellite-dish"></i> INÍCIO
-        </a>
         
         <nav class="sidebar-nav">
             <ul>
-               <li><a href="#"><i class="fas fa-globe"></i>Wiki</a></li>
+               <li><a href="#"><i class="fas fa-globe active"></i>Wiki</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
