--- a/pages/Wiki.html
+++ b/pages/Wiki.html
@@ -26,7 +26,7 @@
         
         <nav class="sidebar-nav">
             <ul>
-               <li><a href="./pages/Abaut.html"><i class="fas fa-globe active"></i>Wiki</a></li>
+               <li><a href="./Abaut.html"><i class="fas fa-globe active"></i>Wiki</a></li>
             </ul>
         </nav>
         <div class="sidebar-footer">
