--- a/pages/More/Web.html
+++ b/pages/More/Web.html
@@ -327,6 +327,7 @@
     
         <ul>
              <a href="../../Home.html"><i class="fas fa-globe"></i> Página Inicial</a>
+             <a href="../Abaut.html"><i class="fas fa-globe"></i> Sobre</a>
         </ul>
     </div>
     
