--- a/pages/characters.html
+++ b/pages/characters.html
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <script src="characters_dados.js" type="module"></script>
+    <script src="./More/characters_dados.js" type="module"></script>
     <script src="./More/characters.js" type="module"></script>
 </body>
 </html>
