--- a/Home.html
+++ b/Home.html
@@ -48,6 +48,9 @@
            <a href="pages/More/Web.html" class="tab-button">
                 <i class="fas fa-globe"></i>Web
             </a>
+            <a href="pages/characters.html" class="tab-button">
+                <i class="fa fas-person-group">characters</i>
+            </a>
         </nav>
         
         <main class="social-feed-container">
