--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
                 <i class="fas fa-globe"></i>Web
             </a>
             <a href="pages/characters.html" class="tab-button">
-                <i class="fa fas-group">characters</i>
+                <i class="fa fas-group"></i>Characters
             </a>
         </nav>
         
