--- a/pages/characters.html
+++ b/pages/characters.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
-    <link rel="stylesheet" href="./More/characters.css">
+    <link rel="stylesheet" href="More/characters.css">
 </head>
 <body>
 
@@ -61,8 +61,7 @@
     <div id="info-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">×</span> 
-            <div id="modal-body">
-                </div>
+            <div id="modal-body"></div>
         </div>
     </div>
     
@@ -75,6 +74,6 @@
         </div>
     </div>
     <script src="./More/characters_dados.js"></script>
-    <script src="./More/characters.js" type="module"></script>
+    <script src="More/characters.js" type="module"></script>
 </body>
 </html>
