--- a/pages/Resumo.html
+++ b/pages/Resumo.html
@@ -569,12 +569,12 @@
         </div>
         
         <nav class="sidebar-nav">
-            <a href="#" class="nav-link nav-link-home active">
+            <a href="../Home.html" class="nav-link nav-link-home active">
                 <i class="fas fa-home"></i> Início
             </a>
             <hr class="sidebar-divider">
             <ul>
-                <li><a href="#" class="nav-link"><i class="fas fa-info-circle"></i>Sobre</a></li>
+                <li><a href="./Abaut.html" class="nav-link"><i class="fas fa-info-circle"></i>Sobre</a></li>
             </ul>
         </nav>
 
