--- a/Home.html
+++ b/Home.html
@@ -48,7 +48,7 @@
            <a href="pages/More/Web.html" class="tab-button">
                 <i class="fas fa-globe"></i>Web
             </a>
-            <a href="pages/characters.html" class="tab-button">
+            <a href="pages/Resumo.html" class="tab-button">
                 <i class="fas fa-dragon"></i>Characters
             </a>
         </nav>
