--- a/pages/Resumo.html
+++ b/pages/Resumo.html
@@ -704,7 +704,7 @@
 
 
     
-    <script src="Resumo-dados.js"></script> 
-    <script src="Resumo-script.js" type="module"></script>
+    <script src="./Resumo-dados.js"></script> 
+    <script src="./Resumo-script.js" type="module"></script>
 </body>
 </html>
