--- a/Home.html
+++ b/Home.html
@@ -49,7 +49,7 @@
                 <i class="fas fa-globe"></i>Web
             </a>
             <a href="pages/Resumo.html" class="tab-button">
-                <i class="fas fa-list"></i>Characters
+                <i class="fas fa-list"></i>Resumo
             </a>
         </nav>
         
