--- a/Home.html
+++ b/Home.html
@@ -51,6 +51,9 @@
             <a href="pages/Resumo.html" class="tab-button">
                 <i class="fas fa-list"></i>Resumo
             </a>
+            <a href="" class="tab-button">
+                <i class="fas fa-dragon"></i>Characters
+            </a>
         </nav>
         
         <main class="social-feed-container">
