--- a/Home.html
+++ b/Home.html
@@ -51,7 +51,7 @@
             <a href="pages/Resumo.html" class="tab-button">
                 <i class="fas fa-list"></i>Resumo
             </a>
-            <a href="" class="tab-button">
+            <a href="pages/Characters.html" class="tab-button">
                 <i class="fas fa-dragon"></i>Characters
             </a>
         </nav>
