--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FanWiki | News Feed</title>
     <link rel="icon" type="image/x-icon" href="./src/favicon.png"> 
-    <link rel="stylesheet" href="teste.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lora:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
@@ -139,6 +139,6 @@
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script async src="https://embed.reddit-resource.com/widgets.js" charset="UTF-8"></script>
 
-    <script src="teste.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
