--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -21,11 +21,22 @@
                 <a href="https://x.com/Caioborges923h?t=0l51rUyI3-D22DP_0QT7lg&s=09" target="_blank"
                     rel="noopener noreferrer">
                     <i class="fas fa-user-astronaut"></i>
-                    <p>Creator</p>
+                    <p>Caio Borges</p>
                 </a>
             </li>
-            
-        </ul>
+            <li>
+                <a href="https://www.instagram.com/maike_dejesus_?igsh=MTBteHk1eGl0dzVkcg==" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fas fa-user-tie"></i> <p>Nome do Segundo Criador</p>
+                </a>
+            </li>
+            <!---<li>
+                <a href="URL_DO_PERFIL_DO_TERCEIRO_CRIADOR" target="_blank"
+                    rel="noopener noreferrer">
+                    <i class="fas fa-magic"></i> <p>Nome do Terceiro Criador</p>
+                </a>
+            </li>--->
+            </ul>
 
         <div class="dropdown-section">
             <div class="dropdown-container">
