--- a/pages/Abaut.html
+++ b/pages/Abaut.html
@@ -27,7 +27,7 @@
             <li>
                 <a href="https://www.instagram.com/maike_dejesus_?igsh=MTBteHk1eGl0dzVkcg==" target="_blank"
                     rel="noopener noreferrer">
-                    <i class="fas fa-user-tie"></i> <p>Nome do Segundo Criador</p>
+                    <i class="fas fa-user-tie"></i> <p>Miqueias de Jesus</p>
                 </a>
             </li>
             <!---<li>
