--- a/Home.html
+++ b/Home.html
@@ -61,6 +61,10 @@
             <a href="pages/Characters.html" class="tab-button">
                 <i class="fas fa-dragon"></i>Characters
             </a>
+            <a href="pages/Backgrauds.html" class="tab-button">
+                <i class="fas fa-photo">Backgrauds</i>
+            </a>
+            
         </nav>
         
         <main class="social-feed-container">
