--- a/Home.html
+++ b/Home.html
@@ -62,7 +62,7 @@
                 <i class="fas fa-dragon"></i>Characters
             </a>
             <a href="pages/Backgrauds.html" class="tab-button">
-                <i class="fas fa-images"></i>Backgrauds
+                <i class="fas fa-image"></i>Backgrauds
             </a>
             
         </nav>
