--- a/pages/Characters.html
+++ b/pages/Characters.html
@@ -398,7 +398,7 @@
     <div class="sidebar">
         <div class="sidebar-header">FanWiki<button id="close-sidebar-button">×</button></div>
         <nav class="sidebar-nav">
-            <a href="../Home.html" class="active"><i class="fas fa-home"></i> Página Inicial</a>
+            <a href="../Index.html" class="active"><i class="fas fa-home"></i> Página Inicial</a>
             <a href="./Abaut.html"><i class="fas fa-info-circle"></i>Sobre</a>
         </nav>
     </div>
