--- a/pages/Backgrauds.html
+++ b/pages/Backgrauds.html
@@ -673,7 +673,7 @@
     </div>
     <nav class="sidebar-nav">
         <ul>
-            <li><a href="../Home.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="../Index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="./Abaut.html"><i class="fas fa-info-circle"></i> Informações</a></li>
         </ul>
     </nav>
