--- a/Index.html
+++ b/Index.html
@@ -64,7 +64,8 @@
             <a href="pages/Backgrauds.html" class="tab-button">
                 <i class="fas fa-image"></i>Backgrauds
             </a>
-            
+            <a href="pages/Musics.html" class="tab-button">
+                <i class="fas fa-sond"></i>Musics
         </nav>
         
         <main class="social-feed-container">
