--- a/pages/Musics.html
+++ b/pages/Musics.html
@@ -301,8 +301,8 @@
     </div>
     <nav class="sidebar-nav">
         <ul>
-            <li><a href="#" class="active"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fas fa-info-circle"></i> Informações</a></li>
+            <li><a href="../Index.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="./Abaut.html"><i class="fas fa-info-circle"></i> Informações</a></li>
         </ul>
     </nav>
     <div class="sidebar-footer">© FanWiki</div>
