--- a/Index.html
+++ b/Index.html
@@ -65,7 +65,7 @@
                 <i class="fas fa-image"></i>Backgrauds
             </a>
             <a href="pages/Musics.html" class="tab-button">
-                <i class="fas fa-sond"></i>Musics
+                <i class="fas fa-music"></i>Musics
         </nav>
         
         <main class="social-feed-container">
