--- a/Index.html
+++ b/Index.html
@@ -67,6 +67,9 @@
             <a href="pages/Musics.html" class="tab-button">
                 <i class="fas fa-music"></i>Musics
             </a>
+            <a href="./pages/More_options.html" class="tab-button">
+                <i class="fas fa-menu"></i>More
+            </a>
         </nav>
         
         <main class="social-feed-container">
