--- a/Index.html
+++ b/Index.html
@@ -68,7 +68,7 @@
                 <i class="fas fa-music"></i>Musics
             </a>
             <a href="./pages/More_options.html" class="tab-button">
-                <i class="fas fa-menu"></i>More
+                <i class="fas fa-ellipsis-v"></i>More
             </a>
         </nav>
         
