--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -104,7 +104,7 @@
                         <i data-lucide="heart" class="w-6 h-6 mb-2 text-pink-400"></i>
                         <span class="font-medium">Hobby</span>
                     </a>
-                    <a href="#" class="p-4 rounded-xl dark-card-shadow flex flex-col items-start hover:ring-2 hover:ring-[var(--accent-color)] transition duration-200" style="background-color: var(--glass-bg);">
+                    <a href="./More_Options/gifs-sticks.html" class="p-4 rounded-xl dark-card-shadow flex flex-col items-start hover:ring-2 hover:ring-[var(--accent-color)] transition duration-200" style="background-color: var(--glass-bg);">
                         <i data-lucide="smile" class="w-6 h-6 mb-2 text-pink-400"></i>
                         <span class="font-medium">Gifs/Stickers</span>
                     </a>
