--- a/pages/More_Options/Gifs-sticks.html
+++ b/pages/More_Options/Gifs-sticks.html
@@ -684,7 +684,7 @@
     </div>
     <nav class="sidebar-nav">
         <ul>
-            <li><a href="More_options.html" class="active"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="../More_options.html" class="active"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="../Abaut.html"><i class="fas fa-info-circle"></i> Informações</a></li>
         </ul>
     </nav>
