--- a/pages/More_Options/Ressources/Draw/Draw.html
+++ b/pages/More_Options/Ressources/Draw/Draw.html
@@ -12,7 +12,7 @@
     <header class="glass-panel top-dock">
         <div class="top-group left">
             <div class="logo">
-                <a href="../../More-options.html" id="home-btn" class="icon-btn accent" title="Início">
+                <a href="../../../More-options.html" id="home-btn" class="icon-btn accent" title="Início">
                     <i class="fa-solid fa-house gradient-text" style="font-size: 1.4rem;"></i>
                 </a>
             </div>
