--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -125,7 +125,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="menu-item">
+                        <a href="./More-Options/Ressources/Draw/Draw.html" class="menu-item">
                             <i data-lucide="pencil" class="w-5 h-5 mr-4 text-pink-400"></i>
                             <span class="flex-grow">Draw</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
