--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -30,7 +30,7 @@
             background-color: var(--bg-color);
             color: var(--text-color);
             font-family: 'Inter', sans-serif;
-            min-height: 100vh;
+            height: 100vh;
             display: flex;
             justify-content: center;
         }
