Add link to Backgrounds page in More_options.html

--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -129,6 +129,13 @@
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </a>
                     </li>
+                    <li>
+                        <a href="./background.html" class="menu-item-link">
+                            <i></i>
+                            <span class="flex-grow">Backgrauds</span>
+                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                        </a>
+                    </li>
 
                     <div class="section-divider"></div>
                     
