--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -130,7 +130,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="./background.html" class="menu-item-link">
+                        <a href="./Backgrauds.html" class="menu-item-link">
                             <i></i>
                             <span class="flex-grow">Backgrauds</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
