--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
             <button class="tab-button active" data-tab="news">
                 <i class="fas fa-newspaper"></i> News
             </button>
-            <a href="pages/Wiki.html" class="tab-button">
+            <a href="pages/More/Wiki/Wiki.html" class="tab-button">
                 <i class="fas fa-brain"></i> Wiki
             </a>
             <a href="pages/Characters.html" class="tab-button">
