--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -226,7 +226,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="./More_Options/Quiz/Puzzles.html" class="modal-option">
+                    <a href="./More_Options/Quiz/Quebra-cabeça.html" class="modal-option">
                         <i data-lucide="puzzle" class="w-5 h-5 mr-4 text-yellow-300"></i>
                         <span class="flex-grow">Quebra-Cabeças/Puzzles</span>
                         <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
