Change exit button to link for navigation

--- a/pages/More_Options/Quiz/Quebra-cabeça.html
+++ b/pages/More_Options/Quiz/Quebra-cabeça.html
@@ -402,7 +402,7 @@
 
     <aside id="sidebar">
         <div class="sidebar-header">
-            <button class="btn-home-exit" onclick="exitGame()">🏠 Home / Sair</button>
+            <a class="btn-home-exit" href="../../More_options.html">🏠 Home / Sair</a>
             <div class="logo">PUZZLE MASTER</div>
             <div class="upload-btn-wrapper">
                 <button class="btn-upload">📷 Carregar Foto Própria</button>
