Replace button with anchor for navigation

--- a/pages/More_Options/Quiz/Perguntas.html
+++ b/pages/More_Options/Quiz/Perguntas.html
@@ -562,9 +562,9 @@
     
     <div id="wheel-screen" class="screen">
         <header class="wheel-header">
-            <button class="header-btn" onclick="resetGame()" aria-label="Voltar para a tela inicial">
+            <a class="header-btn" href="../../More_options.html" aria-label="Voltar para a tela inicial">
                 🏠
-            </button>
+            </a>
             <div class="header-title" style="flex-grow: 1;">Quiz Perguntas</div>
             <div style="width: 44px;"></div> 
         </header>
