Change home button to a link for navigation

--- a/pages/More_Options/Quiz/Memory_game.html
+++ b/pages/More_Options/Quiz/Memory_game.html
@@ -14,9 +14,9 @@
 
     <nav class="top-nav">
         <div class="nav-left">
-            <button id="home-btn" class="nav-btn" aria-label="Voltar ao Início">
+            <a href="../../More_options.html" id="home-btn" class="nav-btn" aria-label="Voltar ao Início">
                 <i class="fas fa-home"></i> <span>HOME</span>
-            </button>
+            </a>
         </div>
 
         <div class="brand-logo">NEBULA MINDS</div>
