--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -218,7 +218,7 @@
                     </li>
                     
                     <li>
-                        <a href="./More_Options/Studio.html" id="studio-link" class="menu-item-link">
+                        <a href="./More_Options/Studio/Studio.html" id="studio-link" class="menu-item-link">
                             <i data-lucide="layers" class="w-5 h-5 mr-4 text-yellow-500"></i>
                             <span class="flex-grow">Studio</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
