--- a/pages/More_Options/Studio/Studio.html
+++ b/pages/More_Options/Studio/Studio.html
@@ -17,7 +17,7 @@
             </a>
         </h1>
         <nav class="header-nav">
-            <a href="/" class="home-link">
+            <a href="../../More_Options.html" class="home-link">
                 <i class="fas fa-home"></i> Home
             </a>
         </nav>
