--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -167,7 +167,14 @@
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </a>
                     </li>
-
+                    
+                    <li>
+                        <a href="./For_You.html" class="menu-item-link">
+                            <i data-lucide="sparkles" class="w-5 h-5 mr-4 text-orange-400"></i>
+                            <span class="flex-grow">Para Você</span>
+                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
+                        </a>
+                    </li>
                     <li>
                         <a href="./Abaut.html" class="menu-item-link">
                             <i data-lucide="info" class="w-5 h-5 mr-4" style="color: var(--spotify-color);"></i>
