--- a/pages/More_Options/Studio/Skin/Mcpe.html
+++ b/pages/More_Options/Studio/Skin/Mcpe.html
@@ -165,7 +165,7 @@
 
     <header>
         <div class="header-left">
-            <a href="../../Studio.html" class="home-link"><i class="fas fa-home"></i> Home</a>
+            <a href="../Studio.html" class="home-link"><i class="fas fa-home"></i> Home</a>
             <div class="brand">SKIN STUDIO</div>
         </div>
 
