--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -178,8 +178,8 @@
 
                     <li>
                         <div id="quiz-button" class="menu-item-link">
-                            <i data-lucide="help-circle" class="w-5 h-5 mr-4 text-blue-400"></i>
-                            <span class="flex-grow">Quiz (Opções de Lista)</span>
+                            <i data-lucide="gamepad-2" class="w-5 h-5 mr-4 text-blue-400"></i>
+                            <span class="flex-grow">Games</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </div>
                     </li>
@@ -199,7 +199,7 @@
     <div id="quiz-modal" class="modal-overlay hidden">
         <div class="modal-content p-4">
             <div class="flex justify-between items-center mb-4">
-                <h3 class="text-lg font-bold text-white">Escolha o Tipo de Quiz</h3>
+                <h3 class="text-lg font-bold text-white">Escolha um Jogo</h3>
                 <button id="close-quiz-modal-button" class="text-[var(--text-color-muted)] hover:text-white transition-colors">
                     <i data-lucide="x" class="w-6 h-6"></i>
                 </button>
