--- a/pages/More_options.html
+++ b/pages/More_options.html
@@ -161,7 +161,7 @@
                     <li>
                         <a href="./Backgrauds.html" class="menu-item-link">
                             <i data-lucide="image" class="w-5 h-5 mr-4 text-green-400"></i>
-                            <span class="flex-grow">Backgrauds</span>
+                            <span class="flex-grow">Backgrounds</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </a>
                     </li>
@@ -182,14 +182,6 @@
                             <span class="flex-grow">Games</span>
                             <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
                         </div>
-                    </li>
-                    
-                    <li>
-                        <a href="./More_Options/Studio/Studio.html" id="studio-link" class="menu-item-link">
-                            <i data-lucide="layers" class="w-5 h-5 mr-4 text-yellow-500"></i>
-                            <span class="flex-grow">Studio</span>
-                            <i data-lucide="chevron-right" class="w-5 h-5 text-[var(--text-color-muted)]"></i>
-                        </a>
                     </li>
                 </ul>
             </section>
@@ -259,7 +251,7 @@
                 if (e.target === quizModal) closeModal(quizModal);
             });
             
-            // Lógica de Placeholder para links vazios ou '#'
+            // Lógica de Placeholder
             document.querySelectorAll('.menu-item-link, .modal-option').forEach(element => {
                 element.addEventListener('click', (e) => {
                     const href = element.getAttribute('href');
