--- a/pages/More_Options/Dicas/Dicas.html
+++ b/pages/More_Options/Dicas/Dicas.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Dicas</title>
+    <title>Lore Space | Dicas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dicas.css">
 </head>
 <body>
 
@@ -18,8 +18,8 @@
                     <span class="logo-text">Lore Space</span>
                 </div>
                 <nav class="nav-menu">
-                    <a href="../../More_options.html" class="nav-item"><i class="fa-solid fa-house"></i> <span>Início</span></a>
-                    <a href="#" class="nav-item active"><i class="fa-solid fa-clapperboard"></i> <span>Feed</span></a>
+                    <a href="inicio.html" class="nav-item"><i class="fa-solid fa-house"></i> <span>Início</span></a>
+                    <a href="#" class="nav-item active"><i class="fa-solid fa-clapperboard"></i> <span>Feed de Dicas</span></a>
                 </nav>
             </div>
         </aside>
@@ -27,7 +27,7 @@
         <main class="main-content">
             <header class="sticky-header">
                 <div class="tab-row">
-                    <button class="tab-btn active" data-tab="0">Dicas</button>
+                    <button class="tab-btn active" data-tab="0">Explorar</button>
                     <button class="tab-btn" data-tab="1">Recentes</button>
                     <div class="tab-indicator-container">
                         <div class="tab-pill"></div>
@@ -39,7 +39,7 @@
                         <div class="search-container">
                             <button id="engine-btn" class="engine-toggle">
                                 <i class="fa-solid fa-wand-magic-sparkles" id="active-engine-icon"></i>
-                                <span id="active-engine-name">Lore Space</span>
+                                <span id="active-engine-name">Interno</span>
                                 <i class="fa-solid fa-chevron-down"></i>
                             </button>
                             <input type="text" id="search-input" placeholder="O que deseja aprender?" autocomplete="off">
@@ -51,7 +51,7 @@
                         <button class="chip active" data-cat="all">Todos</button>
                         <button class="chip" data-cat="games">Games</button>
                         <button class="chip" data-cat="tech">Tech</button>
-                        <button class="chip" data-cat="vida">Vida</button>
+                        <button class="chip" data-cat="vida">Estilo de Vida</button>
                         <button class="chip" data-cat="culinaria">Culinária</button>
                     </div>
                 </div>
@@ -67,37 +67,25 @@
     </div>
 
     <nav class="bottom-bar">
-        <a href="../../More_options.html" class="nav-link"><i class="fa-solid fa-house"></i></a>
+        <a href="inicio.html" class="nav-link"><i class="fa-solid fa-house"></i></a>
         <a href="#" class="nav-link active"><i class="fa-solid fa-clapperboard"></i></a>
     </nav>
 
     <div class="modal" id="engine-modal">
         <div class="modal-body">
             <div class="modal-header">
-                <h3>Buscar em...</h3>
+                <h3>Fonte de Pesquisa</h3>
                 <button class="modal-close"><i class="fa-solid fa-xmark"></i></button>
             </div>
             <div class="engine-grid">
                 <div class="engine-item active" data-engine="internal" data-color="#8A2BE2" data-icon="fa-wand-magic-sparkles">
-                    <i class="fa-solid fa-wand-magic-sparkles"></i><span>Lore Space</span>
+                    <i class="fa-solid fa-wand-magic-sparkles"></i><span>Interno</span>
                 </div>
                 <div class="engine-item" data-engine="google" data-color="#4285F4" data-icon="fa-brands fa-google">
                     <i class="fa-brands fa-google"></i><span>Google</span>
                 </div>
                 <div class="engine-item" data-engine="youtube" data-color="#FF0000" data-icon="fa-brands fa-youtube">
                     <i class="fa-brands fa-youtube"></i><span>YouTube</span>
-                </div>
-                <div class="engine-item" data-engine="perplexity" data-color="#20B2AA" data-icon="fa-solid fa-brain">
-                    <i class="fa-solid fa-brain"></i><span>Perplexity</span>
-                </div>
-                <div class="engine-item" data-engine="naver" data-color="#03C75A" data-icon="fa-solid fa-n">
-                    <i class="fa-solid fa-n"></i><span>Naver</span>
-                </div>
-                <div class="engine-item" data-engine="kwai" data-color="#FF5000" data-icon="fa-solid fa-play">
-                    <i class="fa-solid fa-play"></i><span>Kwai</span>
-                </div>
-                <div class="engine-item" data-engine="tiktok" data-color="#00f2ea" data-icon="fa-brands fa-tiktok">
-                    <i class="fa-brands fa-tiktok"></i><span>TikTok</span>
                 </div>
                 <div class="engine-item" data-engine="reddit" data-color="#FF4500" data-icon="fa-brands fa-reddit-alien">
                     <i class="fa-brands fa-reddit-alien"></i><span>Reddit</span>
@@ -107,6 +95,6 @@
     </div>
 
     <script src="dicas_dados.js"></script>
-    <script src="script.js"></script>
+    <script src="dicas.js"></script>
 </body>
 </html>
